# nitrogen

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/config/: database.rs
src/controllers/: auth.rs
src/routes/: auth.rs  mod.rs  sign_up.rs
src/shared/: api_response.rs  jwt_schema.rs  mod.rs  user_schema.rs
